fixed main nav showing before load on mobile

--- a/components/Nav/DesktopNav.module.css
+++ b/components/Nav/DesktopNav.module.css
@@ -42,12 +42,7 @@
 
 
 @media (max-width: 768px) {
-    .navWrapper {
-        height: var(--nav-height-mobile)
-    }
-
-    .bu .navWrapper ul {
+    .nav {
         display: none;
     }
-
 }
